tests/compile_fail/declare_scheduler_name_kernel_with_kernel_builtin.stderr
error: declare_scheduler!: `name = "Kernel"` collides with the KernelBuiltin variant's display_name (`"kernel"`). Pick a different name so failure dumps and sidecar entries can distinguish this scheduler from the variant label.
 --> tests/compile_fail/declare_scheduler_name_kernel_with_kernel_builtin.rs:9:12
  |
9 |     name = "Kernel",
  |            ^^^^^^^^
